# ytrix

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPENDENCIES.md  PLAN.md  README.md  TODO.md  build.sh  install.sh  publish.sh  pyproject.toml  test.sh
.github/workflows/: ci.yml
.swarm/: context.md  doc-manifest.json  telemetry.jsonl
.swarm/session/: state.json
docs/: Gemfile  _config.yml  commands.md  config-reference.md  errors.md  index.md  setup.md
example/: playlists-yff.txt
examples/: functional_smoke.sh
issues/: 301.md  302.md  303.md  304.md
issues/400/: cla.md  gem.md  gpt.md  phi.md  pplx.md
issues/401/: 01-overview-compliance.md  02-hybrid-architecture.md  03-quota-optimization.md  04-project-context.md  05-gcp-automation.md  06-error-handling.md  07-cli-dashboard.md  08-journaling-improvements.md  09-testing-documentation.md
tests/: __init__.py  conftest.py  test_api.py  test_cache.py  test_cli.py  test_config.py  test_dashboard.py  test_dedup.py  test_error_handling.py  test_extractor.py  test_info.py  test_integration.py  test_journal.py  test_logging.py  test_models.py  test_package.py  test_projects.py  test_quota.py  test_yaml_ops.py
ytrix/: SETUP.txt  __init__.py  __main__.py  api.py  cache.py  config.py  dashboard.py  dedup.py  extractor.py  gcptrix.py  info.py  journal.py  logging.py  models.py  projects.py  quota.py  yaml_ops.py
